--- a/32-Web-Scraping/using_beautifulsoup/0_local_html/website.html
+++ b/32-Web-Scraping/using_beautifulsoup/0_local_html/website.html
@@ -7,19 +7,19 @@
 
 	<body>
 		<h1>First Heading</h1>
-		<p>Text text text text text text text text text text text text text text text. </p>
+		<p class="custom_example">Text text text text text text text text text text text text text text text. </p>
 		<h1 id="named">Second Heading</h1>
 		<p><em>Founder of <strong><a href="https://aldolammel.com/mochilaebike">Mochila & Bike</a></strong>.</em></p>
 		<p>I am a <a href="https://google.com">Python Developer</a>. I ❤️ coffee and world trips.</p>
 		<hr>
 		<h3 class="heading">Books and Teaching</h3>
 		<ul>
-			<li>The Complete iOS App Development Bootcamp</li>
+			<li class="custom_example">The Complete iOS App Development Bootcamp</li>
 			<li>The Complete Web Development Bootcamp</li>
 			<li>100 Days of Code - The Complete Python Bootcamp</li>
 		</ul>
 		<hr>
-		<h3 class="heading">Other Pages</h3>
+		<h3 class="heading custom_example">Other Pages</h3>
 		<a href="https://angelabauer.github.io/cv/hobbies.html">My Hobbies</a>
 		<a href="https://angelabauer.github.io/cv/contact-me.html">Contact Me</a>
 		<br /><br />
