--- a/32-Web-Scraping/using_beautifulsoup/extracting_table/table.html
+++ b/32-Web-Scraping/using_beautifulsoup/extracting_table/table.html
@@ -13,163 +13,120 @@
         <table class="waffle" cellspacing="0" cellpadding="0">
             <thead>
             <tr>
-                <th class="row-header freezebar-origin-ltr"></th>
-                <th id="0C0" style="width:294px;" class="column-headers-background">A</th>
-                <th id="0C1" style="width:231px;" class="column-headers-background">B</th>
-                <th id="0C2" style="width:141px;" class="column-headers-background">C</th>
-                <th id="0C3" style="width:220px;" class="column-headers-background">D</th>
+                <th class="s0">Estado</th>
+                <th class="s0">Particular<br>e Passeio</th>
+                <th class="s0">Caminhonetes<br>e Utilitários</th>
+                <th class="s0">Motocicletas<br>e Quadriciclos</th>
             </tr>
             </thead>
             <tbody>
             <tr style="height: 20px">
-                <th id="0R0" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">1</div>
-                </th>
-                <td class="s0">Estado</td>
-                <td class="s0">Particular<br>e Passeio</td>
-                <td class="s0">Caminhonetes<br>e Utilitários</td>
-                <td class="s0">Motocicletas<br>e Quadriciclos</td>
-            </tr>
-            <tr style="height: 20px">
-                <th id="0R1" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">2</div>
-                </th>
+
                 <td class="s1">Acre</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">1,00%</td>
                 <td class="s1">1,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R2" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">3</div>
-                </th>
+
                 <td class="s1">Alagoas</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,25%</td>
                 <td class="s1">1,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R3" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">4</div>
-                </th>
+
                 <td class="s1">Amapá</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">1,50%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R4" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">5</div>
-                </th>
+
                 <td class="s1">Amazonas</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R5" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">6</div>
-                </th>
+
                 <td class="s1">Bahia</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R6" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">7</div>
-                </th>
+
                 <td class="s1">Ceará</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R7" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">8</div>
-                </th>
+
                 <td class="s1">Distrito Federal</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">1,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R8" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">9</div>
-                </th>
+
                 <td class="s1">Espírito Santo</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">1,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R9" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">10</div>
-                </th>
+
                 <td class="s1">Goiás</td>
                 <td class="s1">3,75%</td>
                 <td class="s1">3,45%</td>
                 <td class="s1">3,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R10" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">11</div>
-                </th>
+
                 <td class="s1">Maranhão</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R11" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">12</div>
-                </th>
+
                 <td class="s1">Minas Gerais</td>
                 <td class="s1">4,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R12" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">13</div>
-                </th>
-                <td class="s2"><a target="_blank" href="https://www.idinheiro.com.br/financaspessoais/tributos/ipva-mt/">Mato
-                    Grosso</a></td>
+
+                <td class="s2"><a target="_blank" href="https://www.idinheiro.com.br/financaspessoais/tributos/ipva-mt/">Mato Grosso</a></td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R13" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">14</div>
-                </th>
+
                 <td class="s1">Mato Grosso do Sul</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R14" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">15</div>
-                </th>
+
                 <td class="s1">Pará</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">1,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R15" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">16</div>
-                </th>
+
                 <td class="s1">Paraíba</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R16" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">17</div>
-                </th>
+
                 <td class="s2"><a target="_blank" href="https://www.idinheiro.com.br/financaspessoais/tributos/ipva-pr/">Paraná</a>
                 </td>
                 <td class="s1">3,50%</td>
@@ -177,9 +134,7 @@
                 <td class="s1">3,50%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R17" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">18</div>
-                </th>
+
                 <td class="s2"><a target="_blank"
                                   href="https://www.idinheiro.com.br/financaspessoais/tributos/consultar-ipva-pe/">Pernambuco</a>
                 </td>
@@ -188,93 +143,70 @@
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R18" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">19</div>
-                </th>
+
                 <td class="s1">Piauí</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R19" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">20</div>
-                </th>
-                <td class="s2"><a target="_blank"
-                                  href="https://www.idinheiro.com.br/financaspessoais/tributos/consulta-ipva-rj-veja-como-fazer/">Rio
-                    de Janeiro</a></td>
+
+                <td class="s2"><a target="_blank" href="https://www.idinheiro.com.br/financaspessoais/tributos/consulta-ipva-rj-veja-como-fazer/">Rio de Janeiro</a></td>
                 <td class="s1">4,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R20" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">21</div>
-                </th>
+
                 <td class="s1">Rio Grande do Norte</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">1,50%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R21" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">22</div>
-                </th>
+
                 <td class="s1">Rio Grande do Sul</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R22" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">23</div>
-                </th>
+
                 <td class="s1">Rondônia</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R23" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">24</div>
-                </th>
+
                 <td class="s1">Roraima</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R24" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">25</div>
-                </th>
+
                 <td class="s1">Santa Catarina</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">1,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R25" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">26</div>
-                </th>
+
                 <td class="s1">Sergipe</td>
                 <td class="s1">3,00%</td>
                 <td class="s1">2,50%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R26" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">27</div>
-                </th>
-                <td class="s2"><a target="_blank" href="https://www.idinheiro.com.br/financaspessoais/tributos/ipva-sp/">São
-                    Paulo</a></td>
+
+                <td class="s2"><a target="_blank" href="https://www.idinheiro.com.br/financaspessoais/tributos/ipva-sp/">São Paulo</a></td>
                 <td class="s1">4,00%</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">2,00%</td>
             </tr>
             <tr style="height: 20px">
-                <th id="0R27" style="height: 20px;" class="row-headers-background">
-                    <div class="row-header-wrapper" style="line-height: 20px">28</div>
-                </th>
+
                 <td class="s1">Tocantins</td>
                 <td class="s1">2,00%</td>
                 <td class="s1">3,00%</td>
