--- a/33-Web-development/general/django/3-3-frontend-templates/1-basic.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/1-basic.html
@@ -51,6 +51,6 @@ DJANGO TEMPLATES: BASIC
 
 
     >> A perfect example of using the template you find in a project example that
-        I create to examplify the usage of views:
+        I create to examplify the usage of views.py:
             
             /33-Web-development/general/django/3-2-backend-views/project-example/sub-app/templates/
