--- a/33-Web-development/general/bootstrap/version-no-install/creating-html-recommended.html
+++ b/33-Web-development/general/bootstrap/version-no-install/creating-html-recommended.html
@@ -1,13 +1,17 @@
 
+<!--
 
-CREATING A RECOMMENDED HTML FOR BOOTSTRAP
+    BOOTSTRAP HTML RECOMMENDED
 
-    1) Go to https://getbootstrap.com/
+        With Django template tags version: 
+            /33-Web-development/general/django/3-3-frontend-templates/bootstrap-with-template.html
 
-    2) Find the example of the html for start;
+        
+        1) Go to https://getbootstrap.com/
 
+        2) Find the example of the html for start;
 
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+-->
 
 
 <!doctype html>
