--- a/33-Web-development/general/django/3-3-frontend-templates/template-bootstrap-installed.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/template-bootstrap-installed.html
@@ -45,6 +45,9 @@
     <h1>Hello, world!</h1>
     <p>text text text text text</p>
 
+    {% bootstrap_form form %}
+    {% bootstrap_button button_type="submit" content="My button text" %}
+
     {% bootstrap_javascript %}
   </body>
 </html>
