--- a/33-Web-development/general/django/3-3-frontend-templates/1-basic.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/1-basic.html
@@ -14,7 +14,7 @@ DJANGO TEMPLATES: BASIC
 
                 {#  Defining the content block of the template must be loaded here #}
                 {% block content %}
-                {% endblock content %}
+                {% endblock %}
 
                 {# A conditional example #}
                 {% if cars %}
