--- a/33-Web-development/general/django/3-3-frontend-templates/for-looping.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/for-looping.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Attack{% endblock title %}
+{% block title %}Attack{% endblock %}
 
 {% block content %}
     <h1>Attacks</h1>
@@ -15,4 +15,4 @@
         <p><a href="#">Create your first attack report!</a></p>
     {% endif %}
     
-{% endblock content %}
+{% endblock %}
