--- a/33-Web-development/general/django/3-3-frontend-templates/authenticated-or-not.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/authenticated-or-not.html
@@ -7,9 +7,9 @@
     
     <p>
         {% if user.is_authenticated %}
-            <a href="{{ url 'in:home_view' }}">Or return to start page!</a>
+            <a href="{% url 'in:home_view' %}">Or return to start page!</a>
         {% else %}
-            <a href="{{ url 'general:home_view' }}">Or return to start page!</a>
+            <a href="{% url 'general:home_view' %}">Or return to start page!</a>
         {% endif %}
     </p>
     
