--- a/33-Web-development/general/django/3-3-frontend-templates/formating-on-template-side.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/formating-on-template-side.html
@@ -1,14 +1,31 @@
 
+{% comment %}
 
-{# CAPITALIZE THE TEXT FIELD #}
+    FORMATING ON TEMPLATE SIDE:
+    https://docs.djangoproject.com/en/5.1/ref/templates/builtins/
+
+{% endcomment %}
+
+
 {{ form.name|title }}
-{# Before capitalize: save private ryan #}
-{# After capitalize: Save Private Ryan #}
+{# Before: save PRIVATE ryan #}
+{# After: Save Private Ryan #}
 
-{# LOWERCASE THE TEXT FIELD #}
+
+{{ form.name|capfirst }}
+{# Before: save PRIVATE ryan #}
+{# After: Save private ryan #}
+
+
 {{ form.name|lower }}
-{# Before lowercase: SaVE Private rYAN #}
-{# After lowercase: save private ryan #}
+{# Before: SaVe PRIVATE rYaN #}
+{# After: save private ryan #}
 
-{# DATE FIELD #}
-{{ form.added_at|date:"M d, Y H:i" }}
+
+{{ form.created_at|timesince }}
+{# Before: Sep, 3, 2024, 2:30 p.m. #}
+{# After: 55 minutes ago #}
+
+{{ form.created_at|date:"M d, Y H:i" }}
+{# https://docs.djangoproject.com/en/5.1/ref/templates/builtins/#date #}
+
