--- a/33-Web-development/general/django/3-3-frontend-templates/form-error-messages.html
+++ b/33-Web-development/general/django/3-3-frontend-templates/form-error-messages.html
@@ -1,3 +1,15 @@
+<!--
+
+    TEMPLATE: ERROR MESSAGES EXAMPLE
+
+        >> If you want to now the category of an error for custom the error CSS, for example,
+            check this out: 
+            
+            /33-Web-development/general/django/3-3-frontend-templates/form-error-css-customization.txt
+
+-->
+
+
 {% extends "base.html" %}
 
 {% load i18n %}
