--- a/33-Web-development/general/django/9-forms/error-messages/frontend-error-messages.html
+++ b/33-Web-development/general/django/9-forms/error-messages/frontend-error-messages.html
@@ -1,3 +1,4 @@
 
 
 /33-Web-development/general/django/3-3-frontend-templates/form-error-messages.html
+/33-Web-development/general/django/3-3-frontend-templates/form-error-css-customization.txt
