--- a/33-Web-development/backend/django/3-3-frontend-templates/form-error-messages.html
+++ b/33-Web-development/backend/django/3-3-frontend-templates/form-error-messages.html
@@ -28,7 +28,7 @@
     <h1>{{ step_name }}</h1>
 
     <!-- STEP FORM - START -->
-    <form name="form-crise" method="post">
+    <form method="post">
 
         {% csrf_token %}
 
