--- a/33-Web-development/backend/django/3-3-frontend-templates/1-basic.html
+++ b/33-Web-development/backend/django/3-3-frontend-templates/1-basic.html
@@ -87,12 +87,7 @@ DJANGO TEMPLATES: BASIC
 
     >> Includes:
 
-        https://www.udemy.com/course/python-django-the-practical-guide/learn/lecture/26372962
-
-        AWARE: to call all variables use in the same template you are using an include, 
-                you must use 'with':
-
-                {% includes "<subapp_folder>/includes/example.html" with active_page="var" %}
+        /33-Web-development/backend/3-3-frontend-templates/include.html
 
 
                 
