--- a/33-Web-development/backend/django/3-3-frontend-templates/authenticated-or-not.html
+++ b/33-Web-development/backend/django/3-3-frontend-templates/authenticated-or-not.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 
-{% block title %}Attack{% endblock %}
+{% block title %}Page Not Found{% endblock %}
 
 {% block content %}
+
     <h1>Page Not Found</h1>
     
     <p>
         {% if user.is_authenticated %}
+
             <a href="{% url 'in:home_view' %}">Or return to start page!</a>
+
         {% else %}
+
             <a href="{% url 'general:home_view' %}">Or return to start page!</a>
+
         {% endif %}
     </p>
     
