--- a/33-Web-development/backend/django/3-3-frontend-templates/1-basic.html
+++ b/33-Web-development/backend/django/3-3-frontend-templates/1-basic.html
@@ -38,7 +38,7 @@ DJANGO TEMPLATES: BASIC
                 >> Defining the template's content-block must be loaded here:
                 
                     {% block content %}
-                    {% endblock %}
+                    {% endblock content %}
 
 
                 >> A conditional example:
