--- a/33-Web-development/backend/django/9-forms/registration/password_reset_confirm_custom.html
+++ b/33-Web-development/backend/django/9-forms/registration/password_reset_confirm_custom.html
@@ -1,9 +1,3 @@
-<!--
-    HOW DO I IMPLEMENT IT:
-
-        /33-Web-development/backend/django/3-1-backend-models-database/3-users/extending-users-with-profile.txt
--->
-
 {% extends "base.html" %}
 {% load i18n %}
 {% block title %}
@@ -20,33 +14,12 @@
             <div class="column is-8">
                 <h1 class="title is-1">{{ header }}</h1>
                 <hr class="has-background-white-ter mb-6" />
-                <!-- CHANGE PASSWORD FORM - START -->
+                <!-- SETTING NEW PASSWORD FORM - START -->
                 <form method="post">
                     {% csrf_token %}
                     <div class="block content is-medium">
                         {# Non-field error #}
-                        {% include "inc/error_message_non_field.html" with var=form %}
-                        {# Old password #}
-                        <div class="columns">
-                            <div class="column">
-                                <div class="field">
-                                    <label for="{{ form.old_password.id }}" class="label">
-                                        {{ form.old_password.label }}
-                                    </label>
-                                    <div class="control has-icons-left">
-                                        {{ form.old_password }}
-                                        <span class="icon is-left">
-                                            <i class="fa-solid fa-unlock-keyhole"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                {# Error message #}
-                                {% include "inc/error_message.html" with var=form.old_password %}
-                                {# Help text #}
-                                {% include "inc/help_text.html" with var=form.old_password %}
-                            </div>
-                            <div class="column is-hidden-mobile"></div>
-                        </div>
+                        {% include "inc/error_message_non_field.html" with var=form %}                        
                         {# New password and confirmation #}
                         <div class="columns">
                             <div class="column">
@@ -88,7 +61,7 @@
                         {# Action buttons #}
                         <div class="columns is-mobile">
                             <div class="column is-6 has-text-left">
-                                <a href="{{ request.META.HTTP_REFERER }}" class="button is-text">{{ bt_back }}</a>
+                                
                             </div>
                             <div class="column is-6 has-text-right">
                                 <button type="submit" class="button is-rounded is-success">
@@ -101,7 +74,7 @@
                         </div>
                     </div>
                 </form>
-                <!-- CHANGE PASSWORD FORM - END -->
+                <!-- SETTING NEW PASSWORD FORM - END -->
             </div>
             <div class="column"></div>
         </div>
