--- a/Web-Development/frontend/vue/vue-knowledge/using-options-api/z-examples/using-cdn-example/index.html
+++ b/Web-Development/frontend/vue/vue-knowledge/using-options-api/z-examples/using-cdn-example/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue Basics | Aldo Lammel</title>
+    <title>Vue Basics through CDN installation</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Unlike LOCAL installation, CDN asks for CSS file declaration here, and NOT in main.js -->
+    <link rel="stylesheet" href="./styles.css" />
     <!-- Calling the Vue CDN (2025) -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <!-- Where the Vue is configured -->
-    <script src="app.js" defer></script>
   </head>
   <body>
-    <section id="assignment">
-      <!-- your name -->
+    <!-- Where Vue must control -->
+    <section id="app">
+      
       <h2>{{ name }}</h2>
       
       <label>Your age:</label>
@@ -28,11 +27,15 @@
       <label>Random number between 0 and 1:</label>
       <p>{{ Math.random().toFixed(2) }}</p>
       <div>
-        <!-- 5) Display some image you found via Google -->
+        <!-- Displaying some image as avatar -->
         <img :src="img" />
       </div>
-      <!-- 6) Prepopulate the input field with your name via the "value" attribute -->
+      <!-- Prepopulating the input field with your name via the "value" attribute -->
       <input type="text" :value="name" class="txt-center" />
+
     </section>
+
+    <!-- Vue init is configured here -->
+    <script src="./main.js" defer></script>
   </body>
 </html>
