models validation knowledge

--- a/Python/Web-development/django/3-3-frontend-templates/form-error-messages.html
+++ b/Python/Web-development/django/3-3-frontend-templates/form-error-messages.html
@@ -2,10 +2,11 @@
 
     TEMPLATE: ERROR MESSAGES EXAMPLE
 
-        >> If you want to now the category of an error for custom the error CSS, for example,
-            check this out: 
-            
+        >> Error categories to custom CSS of error messages:
             /Python/Web-development/django/3-3-frontend-templates/form-error-css-customization.txt
+
+        >> Error messages on base.html (template):
+            /Python/Web-development/django/3-3-frontend-templates/3-base.html
 
 -->
 
