django image uplaod solutions

--- a/Python/Web-development/django/3-3-frontend-templates/template-bootstrap-installed.html
+++ b/Python/Web-development/django/3-3-frontend-templates/template-bootstrap-installed.html
@@ -11,7 +11,7 @@
             $ xxxx
 
          Linux/Ubuntu: 
-            $ pip install django-bootstrap5
+            $ python3 -m pip install django-bootstrap5
 
           Mac:
             $ xxxx
